accounts/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: accounts-deployment
  labels:
    app: accounts
spec:
  replicas: 1
  selector:
    matchLabels:
      app: accounts
  template:
    metadata:
      labels:
        app: accounts
    spec:
      containers:
      - name: accounts
        image: baicham/securedbank-accounts-api:s18
        ports:
        - containerPort: 8091
        resources:
          requests:
            cpu: "200m"
            memory: "400Mi"
          limits:
            cpu: "500m"
            memory: "700Mi"
